fix footer wrap

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,5 +33,5 @@ body {
 }
 
 .boston-time { 
-  width: 6.3125rem;
+  width: 6.4375rem;
 }
